--- a/03-classification/03_homework.ipynb
+++ b/03-classification/03_homework.ipynb
@@ -1155,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q5 "
+    "## Question 5 "
    ]
   },
   {
@@ -1248,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q6:\n",
+    "## Question 6:\n",
     "Use of different C's.  \n",
     "**What is C**:  \n",
     "Inverse of regularization strength; must be a positive float. Like in support vector machines, smaller values specify stronger regularization.\n"
