updated homework 04-evaluation

--- a/04-evaluation/04_homework.ipynb
+++ b/04-evaluation/04_homework.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "4  unknown    5   may       198         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "y                  no          no            no           no       no"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "4       198         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "y                  no          no            no           no       no"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "campaign            0.428546"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 2: Training the model"
+    "### Question 2: Training the model and AUC score for Logistic regression"
    ]
   },
   {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,9 +1029,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The roc auc score  is 0.656\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
     "\n",
@@ -1041,142 +1049,28 @@
     "X_train = dv.fit_transform(train_dicts)\n",
     "\n",
     "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
-    "X_val = dv.transform(val_dicts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_val = dv.transform(val_dicts)\n",
+    "\n",
     "model = LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = model.predict(X_val)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.656"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "roc_auc_score(y_val, y_pred ).round(3)"
+    "y_pred = model.predict(X_val)\n",
+    "\n",
+    "auc = roc_auc_score(y_val, y_pred ).round(3)\n",
+    "\n",
+    "print(f'The roc auc score  is {auc}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3: Precision and Recall"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Evaluate the model on all thresholds from 0.0 to 1.0 with step 0.01"
+    "### Question 3: Precision and Recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.02879608, 0.02272164, 0.02000003, ..., 0.25000065, 0.00209306,\n",
-       "       0.03788533])"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred = model.predict_proba(X_val)[:, 1]\n",
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 , 0.11,\n",
-       "       0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 , 0.21, 0.22,\n",
-       "       0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.3 , 0.31, 0.32, 0.33,\n",
-       "       0.34, 0.35, 0.36, 0.37, 0.38, 0.39, 0.4 , 0.41, 0.42, 0.43, 0.44,\n",
-       "       0.45, 0.46, 0.47, 0.48, 0.49, 0.5 , 0.51, 0.52, 0.53, 0.54, 0.55,\n",
-       "       0.56, 0.57, 0.58, 0.59, 0.6 , 0.61, 0.62, 0.63, 0.64, 0.65, 0.66,\n",
-       "       0.67, 0.68, 0.69, 0.7 , 0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77,\n",
-       "       0.78, 0.79, 0.8 , 0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88,\n",
-       "       0.89, 0.9 , 0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99])"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thresholds = np.arange(0.01, 1.0, 0.01)\n",
-    "thresholds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation_array = []\n",
-    "\n",
-    "for t in thresholds:\n",
-    "    y_pred = model.predict_proba(X_val)[:, 1]\n",
-    "    y_pred_0_or_1 = (y_pred >=t) \n",
-    "\n",
-    "    auc = roc_auc_score(y_val, y_pred_0_or_1)\n",
-    "    \n",
-    "    actual_positive = (y_val == 1)\n",
-    "    actual_negative = (y_val == 0)\n",
-    "\n",
-    "    predict_positive = (y_pred >= t)\n",
-    "    predict_negative = (y_pred < t)\n",
-    "\n",
-    "    tp = (actual_positive & predict_positive).sum()\n",
-    "    fp = (actual_negative & predict_positive).sum()\n",
-    "\n",
-    "    fn = (actual_positive & predict_negative).sum()\n",
-    "    tn = (actual_negative & predict_negative).sum()\n",
-    "\n",
-    "    precision = tp / (tp + fp)\n",
-    "    recall = tp / (tp + fn)\n",
-    "\n",
-    "    evaluation_array.append([t, auc, precision, recall])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1306,19 +1200,46 @@
        "[99 rows x 4 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "thresholds = np.arange(0.01, 1.0, 0.01)\n",
+    "\n",
+    "evaluation_array = []\n",
+    "\n",
+    "for t in thresholds:\n",
+    "    y_pred = model.predict_proba(X_val)[:, 1]\n",
+    "    y_pred_0_or_1 = (y_pred >=t) \n",
+    "\n",
+    "    auc = roc_auc_score(y_val, y_pred_0_or_1)\n",
+    "    \n",
+    "    actual_positive = (y_val == 1)\n",
+    "    actual_negative = (y_val == 0)\n",
+    "\n",
+    "    predict_positive = (y_pred >= t)\n",
+    "    predict_negative = (y_pred < t)\n",
+    "\n",
+    "    tp = (actual_positive & predict_positive).sum()\n",
+    "    fp = (actual_negative & predict_positive).sum()\n",
+    "\n",
+    "    fn = (actual_positive & predict_negative).sum()\n",
+    "    tn = (actual_negative & predict_negative).sum()\n",
+    "\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / (tp + fn)\n",
+    "\n",
+    "    evaluation_array.append([t, auc, precision, recall])\n",
+    "\n",
     "evaluation_df = pd.DataFrame(evaluation_array, columns=['threshold', 'auc', 'precision', 'recall'])\n",
     "evaluation_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1369,12 +1290,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4: F1 score"
+    "We see the precision and recall intersect for threshold in between 0.2 - 0.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4: F1 score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,21 +1331,15 @@
     "\n",
     "    f1_score = 2 * (precision * recall) / (precision + recall)\n",
     "\n",
-    "    evaluation_array.append([t, auc, precision, recall, f1_score])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    evaluation_array.append([t, auc, precision, recall, f1_score])\n",
+    "\n",
+    "\n",
     "evaluation_df = pd.DataFrame(evaluation_array, columns=['threshold', 'auc', 'precision', 'recall', 'f1_score'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1419,7 @@
        "21       0.22  0.77564   0.527079  0.629326  0.573682"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,6 +1427,13 @@
    "source": [
     "print(evaluation_df[evaluation_df['f1_score'] == evaluation_df['f1_score'].max()]['threshold'].item())\n",
     "evaluation_df[evaluation_df['f1_score'] == evaluation_df['f1_score'].max()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We got that F1-score is maximum for threshold 0.22 and we will use it for further analysis."
    ]
   },
   {
@@ -1519,13 +1448,13 @@
    "metadata": {},
    "source": [
     "Now we use thershold = 0.22 for our further analysis.\n",
-    "1. we define our model and train it on full_train dataframe and evaluate on k-fold validation sets\n",
+    "we define our model and train it on full_train dataframe and evaluate on k-fold validation sets\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1590,21 +1519,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 6: Hyperparameter Tuning"
+    "## Question 6: Hyperparameter Tuning for regularisation variable C in Logistic regression "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean and std of auc score of regularisation hyperparameter 1e-06 are  0.701 and  0.009\n",
-      "The mean and std of auc score of regularisation hyperparameter 0.001 are  0.861 and  0.007\n",
-      "The mean and std of auc score of regularisation hyperparameter 1 are  0.906 and  0.006\n"
+      "The mean and std of auc score of regularisation hyperparameter 1e-06 are  0.673 and  0.008\n",
+      "The mean and std of auc score of regularisation hyperparameter 0.001 are  0.739 and  0.012\n",
+      "The mean and std of auc score of regularisation hyperparameter 1 are  0.783 and  0.007\n"
      ]
     }
    ],
@@ -1641,7 +1570,7 @@
     "        \n",
     "        y_pred = model.predict_proba(X_val_k)[:, 1]\n",
     "        y_pred_0_or_1 = (y_pred >=0.22) \n",
-    "        auc_k = roc_auc_score(y_val_k, y_pred)\n",
+    "        auc_k = roc_auc_score(y_val_k, y_pred_0_or_1)\n",
     "        auc_scores.append(auc_k)\n",
     "\n",
     "    print(f'The mean and std of auc score of regularisation hyperparameter {c} are {np.mean(auc_scores): .3f} and {np.std(auc_scores): .3f}')\n",
@@ -1653,11 +1582,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We see above that for C = 1, the mean auc score is maximum."
+   ]
   }
  ],
  "metadata": {
