updated homework 04-evaluation

--- a/04-evaluation/04_homework.ipynb
+++ b/04-evaluation/04_homework.ipynb
@@ -1459,20 +1459,30 @@
    "outputs": [],
    "source": [
     "def train(df_train, y_train, C=1.0):\n",
+    "    \n",
+    "    # --- dataframe to dictionary format\n",
     "    dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
-    "\n",
+    "    \n",
+    "    # --- Define vectorizer to fit and transform \n",
+    "    # (one hot encoding for categorical variables)\n",
     "    dv = DictVectorizer(sparse=False)\n",
     "    X_train = dv.fit_transform(dicts)\n",
-    "\n",
+    "    \n",
+    "    # model fitting\n",
     "    model = LogisticRegression(solver='liblinear', C=1.0, max_iter=1000)\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    return dv, model\n",
     "\n",
     "def predict(df, dv, model):\n",
+    "    \n",
+    "    # --- dataframe to dictionary format\n",
     "    dicts = df[categorical + numerical].to_dict(orient='records')\n",
     "\n",
+    "    # --- Use the vectorizer dv to transform validation data set (no fit here)\n",
     "    X = dv.transform(dicts)\n",
+    "\n",
+    "    # Predict with using best threshold t = 0.22\n",
     "    y_pred = model.predict_proba(X)[:, 1]\n",
     "    y_pred_0_or_1 = (y_pred >=0.22) \n",
     "\n",
@@ -1496,6 +1506,7 @@
    "source": [
     "from sklearn.model_selection import KFold\n",
     "\n",
+    "# 5- fold cross validation with shuffle before splitting\n",
     "kfold =  KFold(n_splits=5, shuffle=True, random_state=1)\n",
     "\n",
     "auc_scores = []\n",
@@ -1541,8 +1552,10 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
     "\n",
+    "# define experimental regularisation parameter\n",
     "C = [0.000001, 0.001, 1]\n",
     "\n",
+    "# 5- fold cross validation with shuffle before splitting\n",
     "kfold = KFold(n_splits=5, shuffle=True, random_state=1)\n",
     "\n",
     "for c in C:\n",
@@ -1550,35 +1563,43 @@
     "    auc_scores = []\n",
     "\n",
     "    for train_idx, val_idx in kfold.split(df_full_train):\n",
-    "\n",
+    "        # train and val dataframes\n",
     "        df_train_k = df_full_train.iloc[train_idx]\n",
     "        df_val_k = df_full_train.iloc[val_idx]\n",
     "\n",
-    "        dv = DictVectorizer(sparse=False)\n",
-    "\n",
+    "        # ------------------------------------------\n",
+    "        # Define X and y for training and validation\n",
+    "        # ------------------------------------------\n",
+    "        # --- Define vectorizer \n",
+    "        dv = DictVectorizer(sparse=False) # define vectorizer\n",
+    "        # --- dataframe to dictionary format\n",
     "        dicts = df_train_k[categorical + numerical].to_dict(orient='records')\n",
-    "\n",
+    "        # --- Fit and transform the training data dictionaries (one hot encoding)   \n",
     "        X_train_k = dv.fit_transform(dicts)\n",
-    "        y_train_k = df_train_k['y']\n",
     "\n",
+    "        # --- Use the same vectorizer to transform validation data set (no fit here)\n",
     "        dicts_val = df_val_k[categorical + numerical].to_dict(orient='records')\n",
     "        X_val_k = dv.transform(dicts_val)\n",
+    "\n",
+    "        # target\n",
+    "        y_train_k = df_train_k['y']\n",
     "        y_val_k = df_val_k['y']\n",
     "\n",
+    "        # ------------------------------------------\n",
+    "        # Define Model\n",
+    "        # ------------------------------------------\n",
     "        model = LogisticRegression(solver='liblinear', C=c, max_iter=10000)\n",
     "        model.fit(X_train_k, y_train_k)\n",
     "        \n",
+    "        # ------------------------------------------\n",
+    "        # Prediction & auc score for each fold\n",
+    "        # ------------------------------------------\n",
     "        y_pred = model.predict_proba(X_val_k)[:, 1]\n",
-    "        y_pred_0_or_1 = (y_pred >=0.22) \n",
+    "        y_pred_0_or_1 = (y_pred >=0.22) # Use best threshold 0.22\n",
     "        auc_k = roc_auc_score(y_val_k, y_pred_0_or_1)\n",
     "        auc_scores.append(auc_k)\n",
     "\n",
-    "    print(f'The mean and std of auc score of regularisation hyperparameter {c} are {np.mean(auc_scores): .3f} and {np.std(auc_scores): .3f}')\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    print(f'The mean and std of auc score of regularisation hyperparameter {c} are {np.mean(auc_scores): .3f} and {np.std(auc_scores): .3f}')\n"
    ]
   },
   {
@@ -1587,6 +1608,11 @@
    "source": [
     "We see above that for C = 1, the mean auc score is maximum."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
